--- a/templates/post.html
+++ b/templates/post.html
@@ -27,10 +27,11 @@
   </h4>
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut sagittis eros. Sed id tellus eget dui fringilla condimentum. Vivamus sed metus id velit blandit vulputate vel non lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut sagittis eros. Sed id tellus eget dui fringilla condimentum. Vivamus sed metus id velit blandit vulputate vel non lacus. </p>
   <h4>
+    <!--posts are here-->
     <p class="text-center">Open positions
     </p>
-  </h4>
-  
+  </h4> 
+  {% include "jobs.html" %}
 </div>
 
 {% endblock %}
