--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -4,9 +4,10 @@
     <h4 style="color:rgb(120,120,120); margin-bottom:4px">
       {{job['title']}}
     </h4>
-    Location: {{job['location']}}
+    <b>Location: </b>{{job['location']}}
     {% if 'salary' in job %}
-       <div>Salary: {{job['salary']}}
+       <div><b>Salary: </b>
+         {{job['salary']}}
        </div>
     {% endif %}
   </div>
