--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                            <h1>Awais Gilal Blog</h1>
+                            <span class="subheading">A Blog Theme by Awais</span>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                         </a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
+                            <a href="/">Awais</a>
                             on September 24, 2023
                         </p>
                     </div>
@@ -36,7 +36,7 @@
                         <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
+                            <a href="#!">Ali murtaza</a>
                             on September 18, 2023
                         </p>
                     </div>
@@ -50,7 +50,7 @@
                         </a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
+                            <a href="#!">Muzamil</a>
                             on August 24, 2023
                         </p>
                     </div>
@@ -64,7 +64,7 @@
                         </a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
+                            <a href="#!">Ali raza</a>
                             on July 8, 2023
                         </p>
                     </div>
