--- a/templates/home_jobs.html
+++ b/templates/home_jobs.html
@@ -11,7 +11,7 @@
                   <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
                   <span class="meta">
                       Posted by
-                      <a href="#!">Start Bootstrap</a>
+                      <a href="#!">awais gilal</a>
                       on August 24, 2023
                   </span>
               </div>
@@ -32,6 +32,7 @@
     </p>
   </h4> 
   {% include "jobs.html" %}
+  <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="/jobs/form">Add Jobs →</a></div>
 </div>
 
 {% endblock %}
